samples/_failures_safe/1761167659_aad36d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_752897e9.c: In function ‘main’:
./samples/SAFE/__tmp_752897e9.c:150:30: error: expected ‘)’ at end of input
  150 |     buffer_free(&decompressed
      |                ~             ^
      |                              )
./samples/SAFE/__tmp_752897e9.c:150:5: error: expected declaration or statement at end of input
  150 |     buffer_free(&decompressed
      |     ^~~~~~~~~~~
